--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detail HTML</title>
 </head>
+
 <body>
     <main>
         <div>
             <h1>{{ list_project.name }}</h1>
             <p>{{ list_project.description }}</p>
             <h2>Tasks</h2>
+            <p>
+                <a href="{% url 'create_task' %}">Create a new task</a>
+            </p>
             {% if list_project.tasks.all|length == 0 %}
             <p>This project has no tasks</p>
-            {% else %} 
+            {% else %}
             <table>
                 <thead>
                     <th>Name</th>
@@ -39,4 +44,5 @@
         </div>
     </main>
 </body>
+
 </html>
