--- a/tasks/templates/tasks/task_list.html
+++ b/tasks/templates/tasks/task_list.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task List</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}
+    Task List
+{% endblock title %}
+
+ {% block content%}
     <main>
         <div>
         <h1>My Tasks</h1>
@@ -34,5 +31,4 @@
         {% endif %}
        </div> 
     </main>
-</body>
-</html>
+{% endblock content%}
