--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}
+    Login
+{% endblock title %}
+
+ {% block content%}
     <main>
         <div>
             <h1>Login</h1>
@@ -17,5 +14,4 @@
             </form>
         </div>
     </main>
-</body>
-</html>
+{% endblock content %}
