--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% block title %}
+    Detail HTML
+{% endblock title %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detail HTML</title>
-</head>
-
-<body>
+ {% block content%}
     <main>
         <div>
             <h1>{{ list_project.name }}</h1>
@@ -43,6 +38,4 @@
             {% endif %}
         </div>
     </main>
-</body>
-
-</html>
+{% endblock content %}
