--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Alpha</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}
+    Project Alpha
+{% endblock title %}
+
+{% block content%}
     <main>
         <div>
             <h1>My Projects</h1>
@@ -35,5 +32,4 @@
             {% endif %}
         </div>
     </main>
-</body>
-</html>
+{% endblock content %}
