--- a/tasks/templates/tasks/create_task.html
+++ b/tasks/templates/tasks/create_task.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% block title %}
+    Create HTML
+{% endblock title %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create HTML</title>
-</head>
-
-<body>
+ {% block content%}
     <main>
         <div>
             <h1>Create a new task</h1>
@@ -19,6 +14,4 @@
             </form>
         </div>
     </main>
-</body>
-
-</html>
+{% endblock content %}
